--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ agp = "8.1.2"
 androidx-test-ext-junit = "1.1.5"
 appcompat = "1.6.1"
 compose-bom = "2023.10.01"
+compose-compiler = "1.5.3"
 core-ktx = "1.12.0"
 espresso-core = "3.5.1"
 junit = "4.13.2"
