--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -36,6 +36,18 @@
     },
     {
       "matchPackagePatterns": [
+        "org.jetbrains.kotlinx.*"
+      ],
+      "groupName": "kotlin"
+    },
+    {
+      "matchPackagePatterns": [
+        "com.google.devtools.ksp"
+      ],
+      "groupName": "kotlin"
+    },
+    {
+      "matchPackagePatterns": [
         "io.mockk"
       ],
       "groupName": "mockk"
