--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -36,7 +36,7 @@
     },
     {
       "matchPackagePatterns": [
-        "org.jetbrains.kotlinx.*"
+        "org.jetbrains.kotlinx"
       ],
       "groupName": "kotlin"
     },
