--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,6 +10,18 @@
     "schedule:weekends"
   ],
   "rebaseWhen": "auto",
+  "customManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": [
+        "^.*.ya?ml$"
+      ],
+      "matchStrings": [
+        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\\s.*?\"(?<currentValue>.*)\"\\s"
+      ],
+      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
+    }
+  ],
   "packageRules": [
     {
       "matchPackagePatterns": [
