--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ activity-compose = "1.8.2"
 agp = "8.3.1"
 androidx-test-ext-junit = "1.1.5"
 appcompat = "1.6.1"
+biometric = "1.1.0"
 compose-bom = "2024.03.00"
 compose-compiler = "1.5.11"
 core-ktx = "1.12.0"
@@ -21,6 +22,7 @@ room = "2.6.1"
 
 [libraries]
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
+androidx-biometric = { module = "androidx.biometric:biometric", version.ref = "biometric" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore-preferences" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
