--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,5 @@ ij_kotlin_allow_trailing_comma_on_call_site = true
 ktlint_standard_function-naming = disabled
 ktlint_standard_multiple-expession-wrapping = disabled
 ktlint_standard_string-template-indent = disabled
+compose_disallow_material2 = true
+compose_allowed_from_m2 = icons
