--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,4 @@ ktlint_standard_multiple-expession-wrapping = disabled
 ktlint_standard_string-template-indent = disabled
 compose_disallow_material2 = true
 compose_allowed_from_m2 = icons
+compose_disallow_unstable_collections = true
