Add Python script to update exchange rates
Update both exchange rates and currencies in repo.
Add update of exchange rates to release pipeline.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,22 @@ on:
       - '*'
 
 jobs:
+  update-exchange-rates:
+    name: Update currency exchange rates
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Run Python script
+        run: python .github/scripts/update_exchange_rates.py
+        env:
+          CURRENCY_EXCHANGE_API_KEY: ${{ secrets.CURRENCY_EXCHANGE_API_KEY }}
   build-apk:
     name: Build Signed APK
+    needs: [update-exchange-rates]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -44,6 +58,7 @@ jobs:
           path: app/build/outputs/apk/release/RecurringExpenseTracker_${{ steps.get_version.outputs.version-without-v }}.apk
   build-appbundle:
     name: Build Signed AppBundle
+    needs: [update-exchange-rates]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
