Prevent Renovate from updating Gradle and the agp

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -41,6 +41,15 @@
         "org.jlleitschuh.gradle.ktlint"
       ],
       "groupName": "ktlint"
+    },
+    {
+      "matchPackagePatterns": [
+        "com.android.library",
+        "com.android.application",
+        "gradle"
+      ],
+      "groupName": "gradle",
+      "enabled": false
     }
   ]
 }
