Add basic Glance Widget
This adds a Widget using jetpack compose glance instead of xml.
This is the basic implementation updating the Widget does not work jet.
Replicating the common UpcomingPaymentsViewModel as with glance we can't
use ViewModels. Also we only have a small amount of basic composables
there is no e.g. Card with this reducing the information and style shown
in the Widget to a minimum.
The configuration of the Widget is also not yet there but prepared to be
also able to use Grid or List mode.

--- a/app/src/androidMain/AndroidManifest.xml
+++ b/app/src/androidMain/AndroidManifest.xml
@@ -37,6 +37,15 @@
             android:name="model.notification.DismissExpenseNotificationReceiver"
             android:exported="false">
         </receiver>
+        <receiver android:name=".widget.UpcomingPaymentsWidgetReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/my_app_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
