Add upcoming expense notifications
You can now set notifications for upcoming expenses in the settings.
Pick how many days in advance and at what time you want to be notified.
You can also enable and disable notifications for each expense, as well
as choose the days in advance.

Closes #83

--- a/app/src/androidMain/AndroidManifest.xml
+++ b/app/src/androidMain/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <application
         android:name=".ExpenseTrackerApplication"
         android:allowBackup="true"
@@ -23,6 +26,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name="model.notification.NotificationLoopReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="model.notification.DismissExpenseNotificationReceiver"
+            android:exported="false">
+        </receiver>
     </application>
 
 </manifest>
