--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ android.useAndroidX=true
 #MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
+ksp.useKSP2=true
