--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ android.useAndroidX=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
 ksp.useKSP2=true
+
+#fix iOS build
+kotlin.native.cacheKind=none
