Make AboutLibraries multiplatform compatible
Make sure the task only runs in release builds
Add token to make sure release pipeline doesn't run into rate limitation

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ ksp.useKSP2=true
 
 #fix iOS build
 kotlin.native.cacheKind=none
+
+#AboutLibraries export path to support multiplatform
+aboutLibraries.exportPath=src/commonMain/composeResources/files/
