--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ androidx-lifecycle-viewmodel = "2.8.7"
 androidx-navigation-compose = "2.8.0-alpha13"
 androidx-test-junit = "1.2.1"
 biometric = "1.1.0"
-compose-plugin = "1.7.3"
+compose-plugin = "1.8.0-rc01"
 glance = "1.1.1"
 koin = "4.0.4"
 kotlin = "2.1.20"
