--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ androidx-navigation-compose = "2.9.0-beta01"
 androidx-test-junit = "1.2.1"
 biometric = "1.1.0"
 compose-plugin = "1.8.1"
-glance = "1.1.1"
+glance = "1.2.0-alpha01"
 koin = "4.0.4"
 kotlin = "2.1.21"
 kotlinx-coroutines = "1.10.2"
