--- a/.github/workflows/pr_pipeline.yml
+++ b/.github/workflows/pr_pipeline.yml
@@ -4,46 +4,92 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ "main" ]
 
 jobs:
-  analyze:
-    name: Analyze
-    # Runner size impacts CodeQL analysis time. To learn more, please see:
-    #   - https://gh.io/recommended-hardware-resources-for-running-codeql
-    #   - https://gh.io/supported-runners-and-hardware-resources
-    #   - https://gh.io/using-larger-runners
-    # Consider using larger runners for possible analysis time improvements.
+  code_formatting:
+    name: Check Code Format
     runs-on: ubuntu-latest
-    timeout-minutes: 360
+    timeout-minutes: 60
+
     permissions:
       actions: read
       contents: read
       security-events: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'java' ]
-        # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby', 'swift' ]
-        # Use only 'java' to analyze code written in Java, Kotlin or both
-        # Use only 'javascript' to analyze code written in JavaScript, TypeScript or both
-        # Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Java 21 (Temurin)
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Check Code Format
+        run: ./gradlew ktlintCheck --no-daemon
+
+  build_android:
+    name: Build Android app
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    - name: Use Java 21
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '21'
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - run: |
-        echo "Verify Ktlint formatting"
-        ./gradlew ktlintCheck
+      - name: Set up Java 21 (Temurin)
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
 
-    - run: |
-        echo "Run, Build Application"
-        ./gradlew assembleDebug test lint
+      - name: Build and Test
+        run: ./gradlew assembleDebug test --no-daemon --stacktrace
+
+      - name: Run Lint Checks
+        run: ./gradlew lintDebug
+
+#      - name: Upload Test Reports
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: test-reports
+#          path: |
+#            **/build/reports/tests/testDebugUnitTest/
+#            **/build/reports/tests/test/
+
+#  build_ios:
+#    name: Build iOS app
+#    runs-on: macos-latest
+#    timeout-minutes: 60
+#
+#    permissions:
+#      actions: read
+#      contents: read
+#      security-events: write
+#
+#    steps:
+#      - uses: maxim-lobanov/setup-xcode@v1
+#        with:
+#          xcode-version: latest-stable
+#
+#      - name: Checkout Repository
+#        uses: actions/checkout@v4
+#
+#      - name: Set up Java 21 (Temurin)
+#        uses: actions/setup-java@v4
+#        with:
+#          distribution: 'temurin'
+#          java-version: '21'
+#
+#      - name: Build shared Kotlin framework
+#        run: ./gradlew compileKotlinIosSimulatorArm64 compileKotlinIosX64 --no-daemon --stacktrace
+#
+#      - name: Build app
+#        run: xcodebuild -project iosApp/iosApp.xcodeproj -configuration Debug -scheme iosApp -sdk iphonesimulator
