exclude org.jetbrains.kotlinx from the Kotlin group

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,7 +26,10 @@
     },
     {
       "groupName": "kotlin",
-      "matchPackageNames": ["/org.jetbrains.kotlin/"]
+      "matchPackageNames": [
+        "/org.jetbrains.kotlin:/",
+        "/org.jetbrains.kotlin\\./"
+      ]
     },
     {
       "groupName": "Room and SQLite",
