Disable warning for unavailable targets on some platforms

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@ kotlin.native.cacheKind=none
 
 #AboutLibraries export path to support multiplatform
 aboutLibraries.exportPath=src/commonMain/composeResources/files/
+
+#Disable warning for unavailable targets on some platforms
+kotlin.native.ignoreDisabledTargets=true
