Fix renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -23,7 +23,7 @@
       "groupName": "kotlin",
       "versioning": "loose",
       "matchPackageNames": ["/com\\.google\\.devtools\\.ksp/"],
-      "allowedVersions": "^(?!.*[-.]?(alpha|beta|rc)[-\\d.]?).*$"
+      "allowedVersions": "/^(?!.*[-.]?(alpha|beta|rc)[-\\d.]?).*$/"
     },
     {
       "groupName": "kotlin",
