--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -21,9 +21,8 @@
   "packageRules": [
     {
       "groupName": "kotlin",
-      "versioning": "loose",
       "matchPackageNames": ["/com\\.google\\.devtools\\.ksp/"],
-      "allowedVersions": "/^(?!.*[-.]?(alpha|beta|rc)[-\\d.]?).*$/"
+      "allowedVersions": "/^[0-9]+\\.[0-9]+\\.[0-9]+-[0-9]+\\.[0-9]+\\.[0-9]+$/"
     },
     {
       "groupName": "kotlin",
