--- a/.github/workflows/pr_pipeline.yml
+++ b/.github/workflows/pr_pipeline.yml
@@ -28,7 +28,7 @@ jobs:
           java-version: '21'
 
       - name: Check Code Format
-        run: ./gradlew ktlintCheck --no-daemon
+        run: ./gradlew ktlintCheck --no-daemon --no-configuration-cache --no-build-cache
 
   build_android:
     name: Build Android app and Desktop
@@ -51,7 +51,7 @@ jobs:
           java-version: '21'
 
       - name: Run Build, Lint and Tests
-        run: ./gradlew build --no-daemon --stacktrace
+        run: ./gradlew build --no-daemon --no-configuration-cache --no-build-cache --stacktrace
 
 #      - name: Upload Test Reports
 #        uses: actions/upload-artifact@v4
